--- a/app/src/main/res/drawable/default_button.xml
+++ b/app/src/main/res/drawable/default_button.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:angle="65"
-                android:startColor="@color/purple"
-                android:endColor="@color/black_purple"/>
+            <solid android:color="@color/purple"/>
             <corners android:radius="150dp"/>
         </shape>
     </item>
