--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient
-                android:angle="80"
-                android:startColor="@color/visor"
-                android:endColor="@color/black_visor"/>
+            <solid android:color="@color/visor"/>
 
             <corners android:radius="20dp"/>
             <stroke android:width="3dp"
