--- a/app/src/main/res/drawable/own_music_list_background.xml
+++ b/app/src/main/res/drawable/own_music_list_background.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:angle="65"
-        android:startColor="@color/background"
-        android:endColor="@color/gray"/>
+    <solid android:color="@color/background"/>
     <stroke
         android:width="3dp"
         android:color="@color/purple"></stroke>
