--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FinalActivity"
-    android:background="@drawable/background_default">
+    android:background="@color/background">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
