--- a/app/src/main/res/layout/activity_listen_final_song.xml
+++ b/app/src/main/res/layout/activity_listen_final_song.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListenFinalSong"
-    android:background="@drawable/background_default">
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/mergeImageView"
