--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FinalActivity"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".FinalActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/logoTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
+        android:fontFamily="@font/monofett"
+        android:text="@string/logo"
+        android:textAlignment="center"
+        android:textColor="@color/purple"
+        android:textSize="40sp" />
+
+    <Button
+        android:id="@+id/downloadTrack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logoTxt"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="100sp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/default_button"
+        android:text="@string/downloadButton"
+        android:textColor="@color/background"
+        android:textAllCaps="false" />
+
+
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/downloadTrack"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20sp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/default_button"
+        android:text="@string/shareButton"
+        android:textColor="@color/background"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/backToMainPageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/shareButton"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20sp"
+        android:layout_marginRight="50dp"
+        android:background="@drawable/default_button"
+        android:textColor="@color/background"
+        android:text="@string/backToMainPageButton"
+        android:textAllCaps="false" />
+
+
+
+</RelativeLayout>
